--- a/templates-tail/bulk_finder.html
+++ b/templates-tail/bulk_finder.html
@@ -123,7 +123,13 @@
 
       <!-- Upload Form -->
       <div class="bg-white rounded-lg shadow-md p-6 mb-6">
-        <h2 class="text-2xl font-bold mb-6">Bulk Email Finder</h2>
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-2xl font-bold">Bulk Email Finder</h2>
+          <a href="/static/sample.xlsx" download class="inline-flex items-center px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+            <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5m0 0l5-5m-5 5V4"/></svg>
+            Download Sample File
+          </a>
+        </div>
         
         <!-- File Format Requirements -->
         <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 mb-6">
