--- a/templates-old/single_verify.html
+++ b/templates-old/single_verify.html
@@ -118,7 +118,7 @@
   </div>
 </div>
 <div class="footer">
-  &copy; {{ 2025 }} LeadFinder. All rights reserved. | 
+  &copy; {{ 2025 }} KnovaData. All rights reserved. | 
   <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
 </div>
 <script>
