--- a/templates-old/admin_dashboard.html
+++ b/templates-old/admin_dashboard.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <div class="footer">
-  &copy; {{ 2025 }} LeadFinder. All rights reserved. |
+  &copy; {{ 2025 }} KnovaData. All rights reserved. |
   <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
