--- a/templates-old/dashboard.html
+++ b/templates-old/dashboard.html
@@ -78,7 +78,7 @@
   </div>
 </div>
 <div class="footer">
-  &copy; {{ 2025 }} LeadFinder. All rights reserved. |
+  &copy; {{ 2025 }} KnovaData. All rights reserved. |
   <a href="mailto:peter@ijanta.com" class="text-decoration-none">Contact: peter@ijanta.com</a>
 </div>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
